--- a/style.css
+++ b/style.css
@@ -1,75 +1,148 @@
-*
-{
-    margin: 0;
-    padding: 0;
+*{
+    font-family: 'Red Hat Display', sans-serif;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    color: white;
+  }
 
+a {
+    text-decoration: none;
+    font-weight: bold;
 }
 
-header
-{
-    width: 100vw;
-    height: 100vw;
+li {
+    list-style: none;
+}
+
+header {
     background-image: url('./images/sdf.jpg');
-    background-position: bottom;
-    background-size: cover;
-     /* display: flex;  */
-    /* align-items: flex-start;
-    justify-content: baseline; */
+    font-family: serif;
+    background-position: right top;
+    background-size: 55%;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-color: black;
+    size: ;
 }
 
-.cake
-{
-    position: absolute;
-    display: inline;
-    padding-top: 2vmin; 
-    padding-left: 3vmin;
-    font-size: 4vmin;
-    color: rgb(255, 253, 253);
-    font-family: 'Playfair Display', serif;
+.navbar {
+    margin-right: 0px;
+    position: relative;
+    top: 5vh;
+    font-size: 3vh;
+    
 
+    /* overflow: hidden;*/
 }
 
-#in
-{
-    position: absolute;
-    font-style: italic;
-    color: #fdb9ce;
-}
-
-.nav
-{
+.menu {
     display: flex;
-
-    position: relative;
-    height: max-content;
-    margin: auto;
-    gap: 5vmin;
-    top: 2vh;
-    align-content: center;
-    justify-content: center;  
-    font-size: 3vmin;
-    font-style:arial ;
-    color: rgb(252, 251, 250);
-    font-family: 'Playfair Display', serif;
+    gap: 3em;
+    justify-content: center;
 
 }
-nav
+
+li :hover
 {
-    text-transform: uppercase;
+
+    transition: 0.5s linear;
+    padding-bottom: 0px;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    padding-top: 0px;
+    transition: 0.3s linear;
+    color: aliceblue, transparent;
+
+}
+
+.cake {
+    position: absolute;
+    padding-left: 2vw;
+    top: 3vh;
+    left: 2vw;
+    font-size: 3vmax;
+    color: aliceblue;
+}
+
+#in {
+    color: rgb(248, 85, 125);
+}
+
+
+.sweet {
     position: relative;
-    z-index: 1;
-    align-items: center;
+    top: 5vh;
+    left: 7vw;
+
 }
-.Home
-{
-    
-    margin-bottom: 2em;
-    border: #fdb9ce;: #fff;
-    padding-bottom: #fff;
-    
+
+.sweet h1 {
+    font-size: 5vw;
+}
+
+.pe {
+    font-size: 2vw;
+    color: rgb(248, 177, 207);
+
+}
+
+.p {
+    font-size: 2vw;
+    color: rgb(248, 177, 207);
+}
+
+.contact {
+    position: absolute;
+    right: -0px;
+    top: -0px;
+    border: 1px solid rgb(245, 41, 119);
+    background-color: hwb(345 8% 8%);
+    margin: 0px;
 }
 
 
+.play {
+    font-size: 13px;
+
+}
+
+.store {
+    font-size: 24px;
+
+}
+
+.app {
+    font-size: 10px;
+}
+
+.str {
+    font-size: 24px;
+}
+
+.g {
+    border: 1px solid white;
+    width: fit-content;
+    padding: 10px 15px 10px 45px;
+    margin-top: 45px;
+    margin-left: 45px;
+    border-radius: 10px;
+
+
+}
+
+.a {
+    border: 1px solid white;
+    width: fit-content;
+    padding: 10px 15px 10px 45px;
+    margin-top: 45px;
+    margin-left: 45px;
+    border-radius: 10px;
+}
+
+.c {
+    display: flex;
+}
 
 
 
