--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header {
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-color: black;
-    size: ;
+    height: 61vw;
 }
 
 .navbar {
@@ -94,16 +94,52 @@ li :hover
 
 .contact {
     position: absolute;
-    right: -0px;
-    top: -0px;
-    border: 1px solid rgb(245, 41, 119);
-    background-color: hwb(345 8% 8%);
+    right: 1vh;
+    top: 1vw;
+    border-radius: 5px;
+    border: 1vw solid rgb(245, 41, 119);
+    background-color: rgb(245, 41, 119);
     margin: 0px;
 }
 
+.pl
+{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+.g
+{
+    position: absolute;
+    top: 26vw;
+    
+    left: -1vh;
+}
+.app
+{
+    position: absolute;
+    top: 27vw;
+    left: 25vh;
+}
 
-.play {
-    font-size: 13px;
+.app img{
+    width: 6em;
+}
+
+.g img
+{
+    width: 8em;
+}
+
+
+
+
+/* 
+
+.g {
+    position: relative;
+    height: 1vh;
+    width: 1vw;
 
 }
 
@@ -144,7 +180,7 @@ li :hover
     display: flex;
 }
 
-
+ */
 
 /* 
  a:nth-child(1)
