--- a/style_ans.css
+++ b/style_ans.css
@@ -44,6 +44,11 @@
     color: black;
 }
 
+.slide
+{
+    display: none;
+}
+
 .crunchy {
 
     padding: 20vw 13vw 20vw 13vw;
@@ -133,26 +138,36 @@
     width: auto;
     padding: 16px;
     margin-top: -22px;
-    color: white;
+    color: rgba(0, 0, 0, 0.39);
     font-weight: bold;
-    font-size: 18px;
+    font-size: 4vw;
     transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
     user-select: none;
+  }
+
+  .fade {
+    animation-name: fade;
+    animation-duration: 2s;
+  }
+
+
+@keyframes fade 
+{
+  0% {opacity: .4;} 
+  100% {opacity: 1;}
+}
+
+  .prev
+  {
+    left: -8vw;
   }
   
   /* Position the "next button" to the right */
   .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
+    right: -8vw;
   }
   
   /* On hover, add a black background color with a little bit see-through */
   .prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-  }
-
-  @keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
+    background-color: rgba(255, 47, 57, 0.37);
   }
